# frangilux-lib

./: README.md  pyproject.toml
frangiluxlib/: reactive_channels.py
frangiluxlib/components/: clip.py  clip_point.py  clip_point_reference_store.py  clip_reader.py  clip_store.py  time_configuration.py
frangiluxlib/components/clip/: clip.py  reader.py  store.py
frangiluxlib/components/clip_point/: clip_point.py  reference_store.py
frangiluxlib/components/layer/: layer.py  store.py
