[build-system]
requires = [
  "setuptools",
  "dataclasses-json"
]
build-backend = "setuptools.build_meta"

[project]
name = "frangilux-lib"
description = "Frangilux library"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  { name = "Mr Frangipane", email = "contact@frangipane.me" }
]
maintainers = [
  { name = "Mr Frangipane", email = "contact@frangipane.me" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron", "gui"]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.hatch.metadata]
allow-direct-references = true
